src/objects/Report_Master_Job__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Master</label>
        <referenceTo>Report_Master__c</referenceTo>
        <relationshipLabel>Report Master Jobs</relationshipLabel>
        <relationshipName>Report_Master_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Report Master Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Report_Master__c</columns>
        <columns>Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ErrorMessage__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>ErrorMessage__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Report_Master__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Master Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Master Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>